# AWML

./: .gitignore  README.md  pyproject.toml  run_centerpoint_local_smoke.sh  run_centerpoint_local_smoke_visualize.sh
autoware_ml/configs/detection3d/dataset/t4dataset/: base.py  j6gen2.py  j6gen2_base.py  j6gen2_v6.py  jpntaxi_base.py  jpntaxi_gen2_base.py  largebus.py  local_smoke.py  pretrain.py  x2.py  xx1.py
autoware_ml/configs/t4dataset/local_smoke/: db_j6_v1.yaml
autoware_ml/detection3d/datasets/transforms/: __init__.py  object_min_points_filter.py
autoware_ml/detection3d/runners/: prediction_runner.py
autoware_ml/detection3d/visualization/: decoded_bboxes.py
pipelines/webauto/download_t4dataset/: README.md  download_t4dataset.py
projects/CenterPoint/configs/t4dataset/Centerpoint/: second_secfpn_4xb16_121m_base_amp_v210.py  second_secfpn_4xb16_121m_local_smoke_infer.py
tools/detection3d/: run_centerpoint_local_smoke.sh  run_centerpoint_local_smoke_visualize.sh  test.py  visualize_bboxes.py
workspace/: README.md  __init__.py  convert_lidar_to_csv.py  main.py  predictions.json  pyproject.toml  visualize_predictions.py
