[project]
name = "cp-inf-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0,<2",
    "ninja>=1.11.0",
    "torch @ https://download.pytorch.org/whl/cu128/torch-2.7.1%2Bcu128-cp311-cp311-manylinux_2_28_x86_64.whl",
    "mmengine==0.10.7",
    "mmcv==2.1.0",
    "mmdet==3.3.0",
    "mmdet3d==1.4.0",
    "mlflow>=2.0.0",
    "perception-dataset @ git+https://github.com/tier4/tier4_perception_dataset.git",
    "polars",
    "matplotlib==3.9.2",
    "onnxruntime>=1.18.0",
]

[tool.uv.extra-build-dependencies]
mmcv = ["setuptools<81"]
