[project]
name = "cp-inf-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.3.0",
    "mmengine==0.10.7",
    "mmcv==2.1.0",
    "mmdet3d==1.4.0",
    "matplotlib==3.8.4",
    "onnxruntime>=1.18.0",
]
